tests/parser/bad/type_t-cid-period-with.scilla
scilla_version 0

library TestLib

(* incorrect separated identifier *)
let f = fun (x : Option.imaginary ) => x
let m = True

contract Test
()
